--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -25,7 +25,7 @@
             </ul>
 
             <h2>Grade Calculator</h2>
-            <p>Use this calculator to calculate your final grade in the class</p>
+            <p>Use this calculator to calculate your final grade in the class.</p>
 
             <div class="mb-3">
                 <form>
