--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,21 +1,37 @@
-﻿<!DOCTYPE html>
+﻿<!--Layton Barney-->
+<!--This was built Jan 10, 2022-->
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
+
+    <!--Webpage title-->
     <title>!!! YOU ARE THE 1,000,000,000,001 VISITOR!!!</title>
+
+    <!--This favicon is the icon displayed in the tab next to the website title-->
     <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
+
+    <!--link to the css for bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!--Contains my own css styling-->
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
     <div class="container">
+        <!--Header with my preferred name-->
         <h1>Hi my name is Layton Barney</h1>
+
+            <!--Picture of myself-->
             <img src="img/tennis.jpeg" class="resize img-thumbnail" />
             <p>I like to play tennis!!</p>
             <br />
 
+            <!--what I hope to get out of this class-->
             <p>This semester I hope to get a better understanding of backend web development. I also hope that learning C# and ASP.NET will make it even easier to learn other new languages.</p>
 
+            <!--List of jobs I would like to pursue when I graduate-->
             <h2>Jobs I would like to purse when I graduate</h2>
 
             <ul>
@@ -24,6 +40,7 @@
                 <li>Create a subscription service for restaurants that uses ML to increase revenue and push advertisements</li>
             </ul>
 
+            <!--This is the form for the inputs used in the grade calculator-->
             <h2>Grade Calculator</h2>
             <p>Use this calculator to calculate your final grade in the class.</p>
 
@@ -52,8 +69,13 @@
                 </form>
             </div>
 
+                <!--This references my jquery-->
                 <script src="lib/jquery/jquery-3.6.0.min.js"></script>
+
+                <!--This references my javascript-->
                 <script src="js/myScript.js"></script>
+
+                <!--Link to the js for bootstrap-->
                 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </div>
     
